@@ -2,6 +2,11 @@ restauth-common 0.6.1 (XX XXXX 2013)
 
   * Various python3 compatability fixes
   * Add a requirements.txt file
+  * Rename content handlers to standard python camel case:
+    * json --> JSONContentHandler
+    * xml --> XMLContentHandler
+    * form --> FormContentHandler
+   Old names are still available for now.
 
 restauth-common 0.6.0 (16 August 2012)
 
